# ragnar-devos

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md
.github/: pull_request_template.md
.ragnar/: config.yaml  routing.yaml
.ragnar/agents/: claude_adapter.md  codex_adapter.md  common.md
.ragnar/checks/: repo_rules.yaml
.ragnar/policies/: global.yaml
.ragnar/templates/: changelog-entry.md  decision.md  runbook-update.md
docs/: AI_CONTEXT.md  ARCHITECTURE.md  CHANGELOG.md  PRD.md  RUNBOOK.md
docs/DECISIONS/: 000-template.md
docs/PROMPTS/: debug.md  feature.md  refactor.md
packs/python-dash-uv/: .dockerignore  Dockerfile  pack.yaml  pyproject.toml
packs/python-dash-uv/app/: main.py
scripts/: check_repo_rules.py
